--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codegraded-project-js",
   "version": "0.0.7",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "index.js",
     "test": "jest --watchAll --verbose --forceExit --silent"
   },
   "repository": {
@@ -15,7 +15,7 @@
     "@babel/preset-env": "^7.14.5",
     "@types/jest": "^26.0.23",
     "eslint": "^7.29.0",
-    "jest": "^27.0.4",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.7"
   }
 }
