--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codegraded-project-js",
   "version": "0.0.7",
   "scripts": {
-    "start": "index.js",
+    "start": "nodemon index.js",
     "test": "jest --watchAll --verbose --forceExit --silent"
   },
   "repository": {
